@@ -1,4 +1,10 @@
+2002-12-27  Rodrigo Moya <rodrigo@gnome-db.org>
+
+	* providers/mdb/gda-mdb-provider.c (gda_mdb_provider_supports): added
+	implemention for provider method.
+
 2002-12-27  Vivien Malerba <malerba@gnome-db.org>
+
        * providers/postgres/gda-postgres-provider.c: merged a patch provided
        by Santi Camps for bug #101642
 
